RESOLVED FIXED123199
[WINCE]Input tag of range type is not painted
https://bugs.webkit.org/show_bug.cgi?id=123199
Summary [WINCE]Input tag of range type is not painted
Zhuang Zhigang
Reported 2013-10-23 01:47:48 PDT
On WinCE port, the Input tag of number type is not painted. Such as below: <input type="number" name="number" value="100" > In fact, the method of "RenderThemeWinCE::paintSliderTrack" and "RenderThemeWinCE::paintSliderThumb" was implemented, but wrong value was returned. It is expected a value of false if we want to paint it.
Attachments
paint input tag of number type on WINCE port (1.78 KB, patch)
2013-10-23 02:02 PDT, Zhuang Zhigang
no flags
Paint the input tag of range type on WinCE port. (1.78 KB, patch)
2013-10-23 17:47 PDT, Zhuang Zhigang
no flags
Zhuang Zhigang
Comment 1 2013-10-23 02:02:59 PDT
Created attachment 214940 [details] paint input tag of number type on WINCE port A patch that can fix this problem.
Zhuang Zhigang
Comment 2 2013-10-23 17:45:57 PDT
(In reply to comment #0) > On WinCE port, the Input tag of number type is not painted. > Such as below: > <input type="number" name="number" value="100" > > > In fact, the method of "RenderThemeWinCE::paintSliderTrack" and "RenderThemeWinCE::paintSliderThumb" was implemented, but wrong value was returned. > It is expected a value of false if we want to paint it. Sorry, I made a mistake.It is the problem of input range type. Changed the summary and will upload a new patch. the Input tag of range type is not painted on WINCE port Such as below: <input type="range" name="range" value="100" >
Zhuang Zhigang
Comment 3 2013-10-23 17:47:44 PDT
Created attachment 215014 [details] Paint the input tag of range type on WinCE port.
Patrick R. Gansterer
Comment 4 2013-10-31 01:41:49 PDT
Comment on attachment 215014 [details] Paint the input tag of range type on WinCE port. Please set the r? flag to get the patch reviewed and into the tree.
Brent Fulgham
Comment 5 2013-10-31 09:50:09 PDT
Comment on attachment 215014 [details] Paint the input tag of range type on WinCE port. View in context: https://bugs.webkit.org/attachment.cgi?id=215014&action=review r=me > Source/WebCore/rendering/RenderThemeWinCE.cpp:512 > + return false; It's strange that we expect these methods to always return 'false'. Doesn't seem like there is much point in having a return value!
WebKit Commit Bot
Comment 6 2013-10-31 10:15:50 PDT
Comment on attachment 215014 [details] Paint the input tag of range type on WinCE port. Clearing flags on attachment: 215014 Committed r158364: <http://trac.webkit.org/changeset/158364>
WebKit Commit Bot
Comment 7 2013-10-31 10:15:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.